# Computer-intelligent-agent

./: README.md  main.py  pyproject.toml  requirements.txt
agent/: agent.py  code_agent.py  worker.py
core/: engine.py  llm.py  model.py
prompt/: sys_prompt.py
utils/: common_utils.py  formatters.py  grounding.py  local_env.py
