[project]
name = "computer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "backoff==2.2.1",
    "numpy==2.4.0",
    "openai==2.14.0",
    "pillow==12.1.0",
    "pyautogui==0.9.54",
    "pytesseract==0.3.13",
]
